[T-165][T-166][T-167] Add demo flows and modeling hub
